Changed my logo and added more css

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 body {
-  background: #a2a8d3;
+  background: #f7f7f2;
+  font-family: "Roboto Slab", serif;
 }
 a {
-  color: #00bbf0;
+  color: #1dad9b;
+  text-decoration: none;
+}
+.App strong {
+  color: #1dad9b;
 }
 .App {
   max-width: 960px;
@@ -14,9 +19,10 @@ a {
 }
 
 .App-logo {
-  max-width: 200px;
+  max-width: 250px;
   display: block;
   margin: 0 auto;
+  border-radius: 20px;
 }
 .App-footer {
   text-align: center;
