--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -13,7 +13,7 @@
   transition: all 200ms ease-in-out;
 }
 .Phonetic a:hover {
-  background: #9670f4;
+  background: #497285;
   color: whitesmoke;
 }
 .Phonetic .text {
